--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ h4, h5, h6 {
   font-weight: 700;
   text-transform: uppercase;
   margin: .5rem 0 1.25rem 0;
+  line-height: initial;
 }
 
 p {
@@ -128,18 +129,19 @@ img {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin: -1.5rem;
 }
 
 .col,
 .col-auto {
   flex: 0 0 100%;
   width: 100%;
+  padding: 1.5rem;
 }
 
 @media (min-width: 600px){
   .col {
     flex: 1;
-    padding: .5rem;
   }
 
   .col-auto {
@@ -233,8 +235,13 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 1.5rem 0;
 }
 
 .hero img {
   border-radius: 1rem;
+}
+
+.hero .row {
+  align-items: center;
 }
