--- a/styles.css
+++ b/styles.css
@@ -122,21 +122,21 @@ img {
   width: 100%;
   max-width: 750px;
   margin: 0 auto;
-  padding: 1.5rem;
+  padding: 1rem;
 }
 
 .row {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin: -1.5rem;
+  margin: -1rem;
 }
 
 .col,
 .col-auto {
   flex: 0 0 100%;
   width: 100%;
-  padding: 1.5rem;
+  padding: 1rem;
 }
 
 @media (min-width: 600px){
@@ -155,7 +155,7 @@ img {
 
 .btn {
   display: block;
-  border-radius: 1rem;
+  border-radius: .75rem;
   text-align: center;
   padding: .5rem .75rem .25rem;
   border: none;
@@ -239,9 +239,37 @@ img {
 }
 
 .hero img {
-  border-radius: 1rem;
+  border-radius: .75rem;
 }
 
 .hero .row {
   align-items: center;
+}
+
+
+/* About Staff */
+
+.about-staff {
+  min-height: calc(50vh - 87px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1.5rem 0;
+}
+
+.about-staff h2 {
+  text-align: center;
+  color: #542659;
+}
+
+.about-staff img {
+  border-radius: .75rem;
+  padding: .25rem;
+  border: 3px solid #6d3573;
+  margin-bottom: .5rem;
+}
+
+.about-staff p {
+  color: rgba(0,0,0,.75);
+  font-size: 1rem;
 }
