--- a/styles.css
+++ b/styles.css
@@ -273,3 +273,24 @@ img {
   color: rgba(0,0,0,.75);
   font-size: 1rem;
 }
+
+
+/* Quote */
+
+.blockquote {
+  margin: 0;
+  padding: 3rem 0;
+  background-color: #f2f2f2;
+  color: #542659;
+  font-style: italic;
+  font-size: 1.5rem;
+}
+
+cite {
+  display: block;
+  text-align: right;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: #494949;
+}
