--- a/styles.css
+++ b/styles.css
@@ -321,3 +321,12 @@ cite {
 .sign-up p {
   margin-bottom: 0;
 }
+
+
+/* Footer */
+
+.footer {
+  padding: 1rem 0;
+  text-align: center;
+  font-size: .9rem;
+}
